Use J2SE method for base64